src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CadenceAssignmentError__c</fullName>
        <label>SequenceAssignmentError</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CadencePerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SequencePerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sequence Id</label>
        <referenceTo>Cadence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntranceCriteria_Matched_Date__c</fullName>
        <label>EntranceCriteria Matched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Call_Attempts__c</fullName>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Days_Since_Last_Attempt__c</fullName>
        <formula>IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), NULL, 
IF(AND(!ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Outbound_Call__c), 
IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), !ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Email_Attempt__c), 
IF(ringdna100__Last_Outbound_Call__c &gt; ringdna100__Last_Email_Attempt__c, (NOW() - ringdna100__Last_Outbound_Call__c), (NOW() - ringdna100__Last_Email_Attempt__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Attempt (Call or Email)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Email_Attempts__c</fullName>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Call__c</fullName>
        <label>First Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Message__c</fullName>
        <label>First Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Call__c</fullName>
        <label>First Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Message__c</fullName>
        <label>First Outbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Email_Attempt__c</fullName>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Call__c</fullName>
        <label>Last Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Message__c</fullName>
        <label>Last Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Call__c</fullName>
        <label>Last Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Message__c</fullName>
        <label>Last Outbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Message_Attempts__c</fullName>
        <label>Message Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ringdna100__RingDNA_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RingDNA Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, NOW() - ringdna100__Last_Email_Attempt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, (NOW() - ringdna100__Last_Email_Attempt__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Message_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Message__c), NULL, (NOW() - ringdna100__Last_Outbound_Message__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Message Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Message_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Message__c), NULL, (NOW() - ringdna100__Last_Outbound_Message__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Message Attempt (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Dial_Minutes__c</fullName>
        <label>Time to First Dial (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_Respond__c</fullName>
        <label>Time to First Response (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>